# SuperDeck

./: .gitignore  README.md  TODO.md  pyproject.toml  run.sh
deploy/: kiosk.desktop  mediaserver-user.service  mediaserver.service
docs/superpowers/plans/: 2026-04-17-gaming-dashboard-redesign.md  2026-04-18-netflix-tile.md  2026-04-19-system-diagnostics.md
docs/superpowers/specs/: 2026-04-17-gaming-dashboard-redesign-design.md  2026-04-18-netflix-tile-design.md  2026-04-19-system-diagnostics-design.md
mediaserver/config/: apps.yaml
mediaserver/static/: app.js  index.html  styles.css
scripts/: bootstrap-new-system.sh  install-controller-profile.sh  install-jellyfin.sh  install-system-deps.sh  launch-netflix.sh  launch-steam-big-picture.sh  netflix-gamepad.py  youtube-home-button.py  youtube-tv-controller.amgp
scripts/tests/: test-install-deps.sh  test-launch-netflix.sh  test-netflix-gamepad.py
superdeck/: __init__.py  app.py  main.py
superdeck/config/: apps.yaml
superdeck/static/: app.js  index.html  styles.css
tests/: test_diagnostics.py
